Remove -XX:MaxPermSize=256m arg on Mac
- Build will fail on Mac if this argument is not removed